# FetchDataFromInternFreak-bot

./: main.py  pyproject.toml
