[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
bs4 = "^0.0.1"
pyTelegramBotAPI = "^4.4.0"
requests = "^2.27.1"
bitly_api = "^0.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
removebg = "^0.04"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"